--- a/src/style.css
+++ b/src/style.css
@@ -2,22 +2,26 @@ body {
     font-family: Arial;
 }
 
+h1 {
+    text-align: center;
+}
+
 
 /* Style the tab */
 
 .tab {
     overflow: hidden;
+    text-align: center;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+    outline: solid black;
 }
 
 .tab button {
     background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
+    outline: solid black 4px;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 15px;
     transition: 0.3s;
     font-size: 17px;
 }
@@ -38,7 +42,19 @@ body {
 
 .tabContent {
     display: none;
+    text-align: center;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+
+footer {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 25px;
+}
+
+#pizza {
+    height: 100px;
+    width: 100px;
 }
